--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-
 .App {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 2vh;
   min-height: 100vh;
   height: 100%;
   background-color: #7091E6;
@@ -26,7 +25,6 @@
   text-align: left;
 }
 
-
 .Reminder-input .form-group {
   margin-bottom: 15px;
   display: flex;
@@ -35,10 +33,10 @@
 
 .Reminder-input input, .Reminder-input select {
   width: 100%;
-  max-width: 300px;
   padding: 10px;
   border: 2px solid rgba(0, 0, 0, 0.67);
-  border-radius: 4px
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 .Submit-button {
